# hermes-nexus-memory

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
examples/: nexus_search.py
mcp/: main.py
nexus/: __init__.py  apply.py  cli.py  confidence.py  config.py  events.py  export.py  staging.py
nexus/analytics/: __init__.py
nexus/discovery/: __init__.py  classifier.py  dedup.py  matcher.py
nexus/graph/: graph.py  schema.py  store.py
nexus/health/: __init__.py
nexus/provenance/: __init__.py
nexus/retrieval/: __init__.py
nexus/scripts/: migrate.py
scripts/: hermes-cron-setup.sh  migrate-1024d.py  migrate-lifecycle.py  nexus_api.py  trust_recompute.py
tests/: test_analytics.py  test_discovery.py  test_graph.py  test_staging.py  test_v210.py
