[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-nexus-memory"
version = "2.1.0"
description = "Persistent vector memory for Hermes Agent — SkillGraph, hybrid retrieval, drift detection, anti-poisoning, skill export"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "Nebo Kacavenda", email = "nebo@kacavenda.com"}]
keywords = [
    "hermes-agent",
    "ai-memory",
    "qdrant",
    "vector-search",
    "rag",
    "bm25",
    "hybrid-retrieval",
    "drift-detection",
    "anti-poisoning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28",
    "networkx>=3.0",
]

[project.optional-dependencies]
hybrid = ["bm25s>=0.3"]
health = ["sentence-transformers", "scikit-learn"]
contradiction = ["voyageai", "scikit-learn"]
all = [
    "bm25s>=0.3",
    "sentence-transformers",
    "qdrant-client>=1.7",
    "voyageai",
    "scikit-learn",
]

[tool.setuptools.packages.find]
include = ["nexus*"]

[project.scripts]
nexus-export = "nexus.export:cli_main"